--- a/index.html
+++ b/index.html
@@ -4,10 +4,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ohmyfood</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
+    <!-- header -->
+    <header>
+        <div class="logo">
+            <img src="images/logo/ohmyfood.png" alt="Logo du site">
+        </div>
+        <div class="location">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Paris, Belleville</p>
+        </div>
+    </header>
+    <!-- Reservez le menu -->
+    <section class="explore">
+        <h1>Reservez le menu qui vous convient</h1>
+        <p>Découvrez des restaurants d'exception<br> sélectionnés par nos soins</p>
+        <button>Explorer nos restaurants</button>
+    </section>
+    <!-- Fonctionnement -->
+    <section class="fonctionnement">
+        <h1>Fonctionnement</h1>
+        <div class="firststep">logo - Choississez un restaurant</div>
+        <div class="secondstep">logo - Composez votre menu</div>
+        <div class="thirdstep">logo - Dégustez au restaurant</div>
+    </section>
+    <!-- Restaurants -->
+    <section class="restaurants">
+        <h1>Restaurants</h1>
+        <article class="card">
+            <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la palette du goût">
+            <div class="card-content">
+                <div class="card-txt">
+                    <h3 class="card-title">La palette du goût</h3>
+                    <p class="card-subtitle">
+                        Ménilmontant
+                    </p>
+                </div>
+                <div class="card-heart"></div>
+            </div>
+        </article>
+        <article class="card">
+            <img src="" alt="Image de la palette du goût">
+            <div class="card-content">
+                <div class="card-txt">
+                    <h3 class="card-title">La palette du goût</h3>
+                    <p class="card-subtitle">
+                        Ménilmontant
+                    </p>
+                </div>
+                <div class="card-heart"></div>
+            </div>
+        </article>
+        <article class="card">
+            <img src="" alt="Image de la palette du goût">
+            <div class="card-content">
+                <div class="card-txt">
+                    <h3 class="card-title">La palette du goût</h3>
+                    <p class="card-subtitle">
+                        Ménilmontant
+                    </p>
+                </div>
+                <div class="card-heart"></div>
+            </div>
+        </article>
+        <article class="card">
+            <img src="" alt="Image de la palette du goût">
+            <div class="card-content">
+                <div class="card-txt">
+                    <h3 class="card-title">La palette du goût</h3>
+                    <p class="card-subtitle">
+                        Ménilmontant
+                    </p>
+                </div>
+                <div class="card-heart"></div>
+            </div>
+        </article>
+    </section>
+    <!-- Footer -->
+    <footer>
+
+    </footer>
 
 </body>
 
