--- a/index.html
+++ b/index.html
@@ -20,81 +20,56 @@
     <!-- header -->
     <header>
         <div class="logo">
-            <img src="images/logo/ohmyfood.png" alt="Logo du site">
+            <img src="./assets/images/logo/ohmyfood.png" alt="Logo de Ohmyfood" class="img">
         </div>
-        <div class="location">
+        <div class="localisation">
             <i class="fa-solid fa-location-dot"></i>
-            <p>Paris, Belleville</p>
+            <span>Paris, Belleville</span>
         </div>
     </header>
-    <!-- Reservez le menu -->
-    <section class="explore">
+    <!-- Présentation -->
+    <section class="section-presentation">
         <h1>Reservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception<br> sélectionnés par nos soins</p>
         <button>Explorer nos restaurants</button>
     </section>
     <!-- Fonctionnement -->
-    <section class="fonctionnement">
-        <h1>Fonctionnement</h1>
-        <div class="firststep">logo - Choississez un restaurant</div>
-        <div class="secondstep">logo - Composez votre menu</div>
-        <div class="thirdstep">logo - Dégustez au restaurant</div>
+    <section class="section-fonctionnement">
+        <h2>Fonctionnement</h2>
+        <div class="cards-fonctionnement-global">
+            <div class="cards-fonctionnement"><span class="logo mobile"></span>Choississez un restaurant</div>
+            <div class="cards-fonctionnement"><span class="logo menu"></span>Composez votre menu</div>
+            <div class="cards-fonctionnement"><span class="logo store"></span>Dégustez au restaurant</div>
+        </div>
     </section>
     <!-- Restaurants -->
-    <section class="restaurants">
-        <h1>Restaurants</h1>
-        <article class="card">
-            <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image de la palette du goût">
-            <div class="card-content">
-                <div class="card-txt">
-                    <h3 class="card-title">La palette du goût</h3>
-                    <p class="card-subtitle">
-                        Ménilmontant
-                    </p>
+    <section class="section-restaurants">
+        <h2>Restaurants</h2>
+        <div class="restaurants-contents">
+            <article class="card">
+                <div class="card-first-section">
+                    <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
+                    <div class="label">Nouveau</div>
                 </div>
-                <div class="card-heart"></div>
-            </div>
-        </article>
-        <article class="card">
-            <img src="" alt="Image de la palette du goût">
-            <div class="card-content">
-                <div class="card-txt">
-                    <h3 class="card-title">La palette du goût</h3>
-                    <p class="card-subtitle">
-                        Ménilmontant
-                    </p>
+                <div class="card-second-section">
+                    <div class="card-content">
+                        <h3 class="card-title">La palette du goût</h3>
+                        <p class="card-subtitle">Ménilmontant</p>
+                        <div class="card-heart"></div>
+                    </div>
                 </div>
-                <div class="card-heart"></div>
-            </div>
-        </article>
-        <article class="card">
-            <img src="" alt="Image de la palette du goût">
-            <div class="card-content">
-                <div class="card-txt">
-                    <h3 class="card-title">La palette du goût</h3>
-                    <p class="card-subtitle">
-                        Ménilmontant
-                    </p>
-                </div>
-                <div class="card-heart"></div>
-            </div>
-        </article>
-        <article class="card">
-            <img src="" alt="Image de la palette du goût">
-            <div class="card-content">
-                <div class="card-txt">
-                    <h3 class="card-title">La palette du goût</h3>
-                    <p class="card-subtitle">
-                        Ménilmontant
-                    </p>
-                </div>
-                <div class="card-heart"></div>
-            </div>
-        </article>
+            </article>
+        </div>
     </section>
     <!-- Footer -->
     <footer>
-
+        <h3>ohmyfood</h3>
+        <ul>
+            <li class="ico-ustensils"><a href="#">Proposer un restaurant</a></li>
+            <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
+        </ul>
     </footer>
 
 </body>
