--- a/index.html
+++ b/index.html
@@ -4,16 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ohmyfood</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>Homepage_Ohmyfood</title>
+    <script src="https://kit.fontawesome.com/4a5424dcf3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./SCSS/style.css">
 </head>
 
 <body>
@@ -37,9 +30,9 @@
     <section class="section-fonctionnement">
         <h2>Fonctionnement</h2>
         <div class="cards-fonctionnement-global">
-            <div class="cards-fonctionnement"><span class="logo mobile"></span>Choississez un restaurant</div>
-            <div class="cards-fonctionnement"><span class="logo menu"></span>Composez votre menu</div>
-            <div class="cards-fonctionnement"><span class="logo store"></span>Dégustez au restaurant</div>
+            <div class="cards-fonctionnement"><span class="icon mobile"></span>Choississez un restaurant</div>
+            <div class="cards-fonctionnement"><span class="icon menu"></span>Composez votre menu</div>
+            <div class="cards-fonctionnement"><span class="icon store"></span>Dégustez au restaurant</div>
         </div>
     </section>
     <!-- Restaurants -->
@@ -65,13 +58,12 @@
     <footer>
         <h3>ohmyfood</h3>
         <ul>
-            <li class="ico-ustensils"><a href="#">Proposer un restaurant</a></li>
+            <li class="ico-tools"><a href="#">Proposer un restaurant</a></li>
             <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
             <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
         </ul>
     </footer>
-
 </body>
 
 </html>
