--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -4,13 +4,9 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>HMenu Restaurant À la française</title>
-   <script src="https://kit.fontawesome.com/8f6be8aeb3.js" crossorigin="anonymous"></script>
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="../css/stylemenu.css">
-
+   <title>Menu Restaurant À la française</title>
+   <script src="https://kit.fontawesome.com/4a5424dcf3.js" crossorigin="anonymous"></script>
+   <link rel="stylesheet" type="text/css" href="../SCSS/stylemenu.css">
 </head>
 
 <body>
@@ -20,41 +16,28 @@
             <i class="fa-solid fa-arrow-left fa-lg"></i>
          </a>
          <div class="logo-img">
-            <img src="../assets/images/logo/ohmyfood.png" alt="Logo Oh my food en lettre noir">
+            <img src="../assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood en lettre noir">
          </div>
       </div>
    </header>
 
    <main>
-      <img class="menu-image" src="../assets/images/restaurants/la-française.jpg" alt="#">
+      <img class="menu-image" src="../assets/images/restaurants/alafrancaise.jpg" alt="#">
 
       <section class="menu">
          <div class="menu__title">
             <h1>À la française</h1>
-            <div class="heart2">
-               <svg class="svg-inline--fa fa-heart anim heart2" id="heart" data-icon="heart" role="img"
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-
-                  <linearGradient id="myGradient" gradientTransform="rotate(90)">
-                     <stop offset="0%" stop-color="transparent" />
-                     <stop offset="100%" stop-color="transparent" />
-                  </linearGradient>
-                  <path fill="currentColor"
-                     d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z">
-                  </path>
-               </svg>
-            </div>
          </div>
 
-         <!--   ***  ENTREES ***   -->
+         <!--  Entrées   -->
 
          <div class="menu-content starter">
             <h2>ENTRÉES</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Tartare de poulpe acidulé</h3>
-                     <p class="note">Aux zestes d'orange</p>
+                     <p class="description">Aux zestes d'orange</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -68,9 +51,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Velouté de légumes d'antan</h3>
-                     <p class="note">Carotte, panais, topinambour</p>
+                     <p class="description">Carotte, panais, topinambour</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -84,9 +67,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Soupe à l'oignon</h3>
-                     <p class="note">Revisitée</p>
+                     <p class="description">Revisitée</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -100,15 +83,15 @@
             </ul>
          </div>
 
-         <!--   ***  PLATS ***   -->
+         <!--  PLATS   -->
 
          <div class="menu-content dish">
             <h2>PLATS</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Coquilles Saint-Jacques</h3>
-                     <p class="note">Accompagnées d'une purée de panais</p>
+                     <p class="description">Accompagnées d'une purée de panais</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -122,9 +105,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Magret de canard</h3>
-                     <p class="note">Et parmentier de pommes de terre</p>
+                     <p class="description">Et parmentier de pommes de terre</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -138,9 +121,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                     <p class="note">Sur son lit de gnocchis aux légumes</p>
+                     <p class="description">Sur son lit de gnocchis aux légumes</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -154,17 +137,15 @@
             </ul>
          </div>
 
-
-         <!--   ***  DESSERTS ***   -->
-
+         <!--  DESSERTS    -->
 
          <div class="menu-content dessert">
             <h2>DESSERTS</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Pétales de violettes glacés</h3>
-                     <p class="note">Et purée de noisettes
+                     <p class="description">Et purée de noisettes
                      </p>
                   </div>
                   <div class="right-content">
@@ -179,9 +160,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Fondant au chocolat </h3>
-                     <p class="note">Revisité</p>
+                     <p class="description">Revisité</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -195,9 +176,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Millefeuille croustillant</h3>
-                     <p class="note">Myrtilles et pâte d’amande</p>
+                     <p class="description">Myrtilles et pâte d’amande</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -211,7 +192,7 @@
             </ul>
          </div>
 
-         <button type="submit" value="Commander" class="btn__cta">
+         <button type="submit" value="Commander" class="btn__main">
             Commander
          </button>
 
@@ -222,7 +203,7 @@
    <footer>
       <h3>ohmyfood</h3>
       <ul>
-         <li class="ico-ustensils"><a href="#">Proposer un restaurant</a></li>
+         <li class="ico-tools"><a href="#">Proposer un restaurant</a></li>
          <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
          <li><a href="#">Mentions légales</a></li>
          <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
