--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -5,11 +5,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Menu Restaurant Le délice des sens</title>
-   <script src="https://kit.fontawesome.com/8f6be8aeb3.js" crossorigin="anonymous"></script>
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="../css/stylemenu.css">
+   <script src="https://kit.fontawesome.com/4a5424dcf3.js" crossorigin="anonymous"></script>
+   <link rel="stylesheet" type="text/css" href="../SCSS/stylemenu.css">
 
 </head>
 
@@ -26,7 +23,7 @@
    </header>
 
    <main>
-      <img class="menu-image" src="../assets/images/restaurants/delice-des-sens.jpg" alt="#">
+      <img class="menu-image" src="../assets/images/restaurants/ledelicedessens.jpg" alt="#">
 
       <section class="menu">
          <div class="menu__title">
