Changements majeur, ajout du loader non foncitonnel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <!-- header -->
+    <!-- Loader -->
+    <div class="loader"><i class="fa-solid fa-circle-notch fa-spin fa-7x"></i></div>
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="./assets/images/logo/ohmyfood.png" alt="Logo de Ohmyfood" class="img">
@@ -52,6 +54,44 @@
                     </div>
                 </div>
             </article>
+            <article class="card">
+                <div class="card-first-section">
+                    <img src="./assets/images/restaurants/lanoteenechantee.jpg" alt="Image de la palette du goût">
+                    <div class="label">Nouveau</div>
+                </div>
+                <div class="card-second-section">
+                    <div class="card-content">
+                        <h3 class="card-title">La note enchantée</h3>
+                        <p class="card-subtitle">Charonne</p>
+                        <div class="card-heart"></div>
+                    </div>
+                </div>
+            </article>
+            <article class="card">
+                <div class="card-first-section">
+                    <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
+                </div>
+                <div class="card-second-section">
+                    <div class="card-content">
+                        <h3 class="card-title">À la française</h3>
+                        <p class="card-subtitle">Cité Rouge</p>
+                        <div class="card-heart"></div>
+                    </div>
+                </div>
+            </article>
+            <article class="card">
+                <div class="card-first-section">
+                    <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
+                </div>
+                <div class="card-second-section">
+                    <div class="card-content">
+                        <h3 class="card-title">Le délice des sens</h3>
+                        <p class="card-subtitle">Folie-Méricourt</p>
+                        <div class="card-heart"></div>
+                    </div>
+                </div>
+            </article>
+
         </div>
     </section>
     <!-- Footer -->
