--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -192,7 +192,7 @@
             </ul>
          </div>
 
-         <button type="submit" value="Commander" class="btn__main">
+         <button type="submit" value="Commander" class="btn__main anim_button">
             Commander
          </button>
 
