Animation du coeur ok et Footer ok

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 <body>
     <!-- Loader -->
-    <div class="loader"><i class="fa-solid fa-circle-notch fa-spin fa-7x"></i></div>
+    <div class="loader">
+        <div class="dot d1"></div>
+        <div class="dot d2"></div>
+        <div class="dot d3"></div>
+    </div>
+
     <!-- Header -->
     <header>
         <div class="logo">
@@ -41,57 +46,77 @@
     <section class="section-restaurants">
         <h2>Restaurants</h2>
         <div class="restaurants-contents">
-            <article class="card">
-                <div class="card-first-section">
-                    <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
-                    <div class="label">Nouveau</div>
-                </div>
-                <div class="card-second-section">
-                    <div class="card-content">
-                        <h3 class="card-title">La palette du goût</h3>
-                        <p class="card-subtitle">Ménilmontant</p>
-                        <div class="card-heart"></div>
+            <a href="./restaurants/lapalettedugout.html">
+                <article class="card">
+                    <div class="card-first-section">
+                        <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
+                        <div class="label">Nouveau</div>
                     </div>
-                </div>
-            </article>
-            <article class="card">
-                <div class="card-first-section">
-                    <img src="./assets/images/restaurants/lanoteenechantee.jpg" alt="Image de la palette du goût">
-                    <div class="label">Nouveau</div>
-                </div>
-                <div class="card-second-section">
-                    <div class="card-content">
-                        <h3 class="card-title">La note enchantée</h3>
-                        <p class="card-subtitle">Charonne</p>
-                        <div class="card-heart"></div>
+                    <div class="card-second-section">
+                        <div class="card-content">
+                            <h3 class="card-title">La palette du goût</h3>
+                            <p class="card-subtitle">Ménilmontant</p>
+                        </div>
+                        <div class="card-heart">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
                     </div>
-                </div>
-            </article>
-            <article class="card">
-                <div class="card-first-section">
-                    <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
-                </div>
-                <div class="card-second-section">
-                    <div class="card-content">
-                        <h3 class="card-title">À la française</h3>
-                        <p class="card-subtitle">Cité Rouge</p>
-                        <div class="card-heart"></div>
+                </article>
+            </a>
+            <a href="./restaurants/lanoteenchantee.html">
+                <article class="card">
+                    <div class="card-first-section">
+                        <img src="./assets/images/restaurants/lanoteenechantee.jpg"
+                            alt="Image du restaurant de la note enchantée">
+                        <div class="label">Nouveau</div>
                     </div>
-                </div>
-            </article>
-            <article class="card">
-                <div class="card-first-section">
-                    <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
-                </div>
-                <div class="card-second-section">
-                    <div class="card-content">
-                        <h3 class="card-title">Le délice des sens</h3>
-                        <p class="card-subtitle">Folie-Méricourt</p>
-                        <div class="card-heart"></div>
+                    <div class="card-second-section">
+                        <div class="card-content">
+                            <h3 class="card-title">La note enchantée</h3>
+                            <p class="card-subtitle">Charonne</p>
+                        </div>
+                        <div class="card-heart">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
                     </div>
-                </div>
-            </article>
-
+                </article>
+            </a>
+            <a href="./restaurants/lapalettedugout.html">
+                <article class="card">
+                    <div class="card-first-section">
+                        <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
+                    </div>
+                    <div class="card-second-section">
+                        <div class="card-content">
+                            <h3 class="card-title">À la française</h3>
+                            <p class="card-subtitle">Cité Rouge</p>
+                        </div>
+                        <div class="card-heart">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                </article>
+            </a>
+            <a href="./restaurants/ledelicedessens.html">
+                <article class="card">
+                    <div class="card-first-section">
+                        <img src="./assets/images/restaurants/ledelicedessens.jpg" alt="Image de le délice des sens">
+                    </div>
+                    <div class="card-second-section">
+                        <div class="card-content">
+                            <h3 class="card-title">Le délice des sens</h3>
+                            <p class="card-subtitle">Folie-Méricourt</p>
+                        </div>
+                        <div class="card-heart">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </div>
+                </article>
+            </a>
         </div>
     </section>
     <!-- Footer -->
