--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Menu Restaurant La note enchantée</title>
+   <title>Menu Restaurant La description enchantée</title>
    <script src="https://kit.fontawesome.com/4a5424dcf3.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" type="text/css" href="../SCSS/stylemenu.css">
 
@@ -24,24 +24,11 @@
       </header>
 
       <main>
-         <img class="menu-image" src="../assets/images/restaurants/lanoteenechantee.jpg" alt="#">
+         <img class="menu-image" src="../assets/images/restaurants/ladescriptionenechantee.jpg" alt="#">
 
          <section class="menu">
             <div class="menu__title">
-               <h1>La note enchantée</h1>
-               <div class="heart2">
-                  <svg class="svg-inline--fa fa-heart anim heart2" id="heart" data-icon="heart" role="img"
-                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-
-                     <linearGradient id="myGradient" gradientTransform="rotate(90)">
-                        <stop offset="0%" stop-color="transparent" />
-                        <stop offset="100%" stop-color="transparent" />
-                     </linearGradient>
-                     <path fill="currentColor"
-                        d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z">
-                     </path>
-                  </svg>
-               </div>
+               <h1>La description enchantée</h1>
             </div>
 
             <!--   ***  ENTREES ***   -->
@@ -50,9 +37,9 @@
                <h2>ENTRÉES</h2>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Ravioles de foie gras</h3>
-                        <p class="note">Accompagnées de leur crème à la truffe</p>
+                        <p class="description">Accompagnées de leur crème à la truffe</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -66,9 +53,9 @@
                </ul>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Caviar osciètre </h3>
-                        <p class="note">Sur blini à la farine de blé noir</p>
+                        <p class="description">Sur blini à la farine de blé noir</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -82,9 +69,9 @@
                </ul>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Homard et espuma de potiron</h3>
-                        <p class="note">Marinés aux zestes d'orange</p>
+                        <p class="description">Marinés aux zestes d'orange</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -98,9 +85,9 @@
                </ul>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Foie gras de canard cuit entier</h3>
-                        <p class="note">Confiture de figue et pain toasté</p>
+                        <p class="description">Confiture de figue et pain toasté</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -120,9 +107,9 @@
                <h2>PLATS</h2>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Noix de coquilles Saint-Jacques</h3>
-                        <p class="note">Sur lit de purée de céleri-rave</p>
+                        <p class="description">Sur lit de purée de céleri-rave</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -136,9 +123,9 @@
                </ul>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Langoustine poêlée</h3>
-                        <p class="note">Purée de patate douce</p>
+                        <p class="description">Purée de patate douce</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -152,9 +139,9 @@
                </ul>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Mijoté de queue de bœuf </h3>
-                        <p class="note">Et riz sauvage aux zestes de citron</p>
+                        <p class="description">Et riz sauvage aux zestes de citron</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -176,9 +163,9 @@
                <h2>DESSERTS</h2>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Macaron noisette et chocolat</h3>
-                        <p class="note">Glace au caramel brun et sel de Guérandes</p>
+                        <p class="description">Glace au caramel brun et sel de Guérandes</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -192,9 +179,9 @@
                </ul>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Baba au rhum revisité</h3>
-                        <p class="note">Avec son coulis de citron</p>
+                        <p class="description">Avec son coulis de citron</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -208,9 +195,9 @@
                </ul>
                <ul class="card-list">
                   <li class="card">
-                     <div class="texts-wrapper">
+                     <div class="text-content">
                         <h3>Tarte au citron meringuée </h3>
-                        <p class="note">Déstructurée</p>
+                        <p class="description">Déstructurée</p>
                      </div>
                      <div class="right-content">
                         <p class="price">
@@ -224,7 +211,7 @@
                </ul>
             </div>
 
-            <button type="submit" value="Commander" class="btn__cta">
+            <button type="submit" value="Commander>
                Commander
             </button>
 
@@ -235,12 +222,12 @@
       <footer>
          <h3>ohmyfood</h3>
          <ul>
-            <li class="ico-ustensils"><a href="#">Proposer un restaurant</a></li>
-            <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
-         </ul>
-      </footer>
+            <li class=" ico-tools"><a href="#">Proposer un restaurant</a></li>
+               <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
+               <li><a href="#">Mentions légales</a></li>
+               <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
+               </ul>
+               </footer>
 </body>
 
 </html>
