--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -28,18 +28,9 @@
       <section class="menu">
          <div class="menu__title">
             <h1>La palette du goût</h1>
-            <div class="heart2">
-               <svg class="svg-inline--fa fa-heart anim heart2" id="heart" data-icon="heart" role="img"
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-
-                  <linearGradient id="myGradient" gradientTransform="rotate(90)">
-                     <stop offset="0%" stop-color="transparent" />
-                     <stop offset="100%" stop-color="transparent" />
-                  </linearGradient>
-                  <path fill="currentColor"
-                     d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z">
-                  </path>
-               </svg>
+            <div class="card-heart">
+               <i class="fa-regular fa-heart"></i>
+               <i class="fa-solid fa-heart"></i>
             </div>
          </div>
 
@@ -49,9 +40,9 @@
             <h2>ENTRÉES</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Fricassées d'escargots</h3>
-                     <p class="note">Au piment d'Espelette</p>
+                     <p class="description">Au piment d'Espelette</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -65,9 +56,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Foie gras de canard mi-cuit</h3>
-                     <p class="note">Et ses copeaux de truffe noire</p>
+                     <p class="description">Et ses copeaux de truffe noire</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -81,9 +72,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Œuf au plat</h3>
-                     <p class="note">Assaisonné à la truffe sur lit de caviar</p>
+                     <p class="description">Assaisonné à la truffe sur lit de caviar</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -103,9 +94,9 @@
             <h2>PLATS</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Filet de bœuf aux herbes</h3>
-                     <p class="note">Accompagné de sa ribambelle de légumes</p>
+                     <p class="description">Accompagné de sa ribambelle de légumes</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -119,9 +110,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Parmentier de queue de bœuf</h3>
-                     <p class="note">À la truffe noire sur sa purée de panais</p>
+                     <p class="description">À la truffe noire sur sa purée de panais</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -135,9 +126,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Filet de turbot</h3>
-                     <p class="note">Aux agrumes</p>
+                     <p class="description">Aux agrumes</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -159,9 +150,9 @@
             <h2>DESSERTS</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Paris-Brest</h3>
-                     <p class="note">Revisités</p>
+                     <p class="description">Revisités</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -175,9 +166,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Macaron au chocolat d'exception </h3>
-                     <p class="note">Et glace à la vanille de Madagascar</p>
+                     <p class="description">Et glace à la vanille de Madagascar</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -191,9 +182,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Mousse au chocolat </h3>
-                     <p class="note">Au piment d'Espelette et à la truffe noire</p>
+                     <p class="description">Au piment d'Espelette et à la truffe noire</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -207,7 +198,7 @@
             </ul>
          </div>
 
-         <button type="submit" value="Commander" class="btn__cta">
+         <button type="submit" value="Commander">
             Commander
          </button>
 
@@ -218,7 +209,7 @@
    <footer>
       <h3>ohmyfood</h3>
       <ul>
-         <li class="ico-ustensils"><a href="#">Proposer un restaurant</a></li>
+         <li class="ico-tools"><a href="#">Proposer un restaurant</a></li>
          <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
          <li><a href="#">Mentions légales</a></li>
          <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
