--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -28,19 +28,6 @@
       <section class="menu">
          <div class="menu__title">
             <h1>Le délice des sens</h1>
-            <div class="heart2">
-               <svg class="svg-inline--fa fa-heart anim heart2" id="heart" data-icon="heart" role="img"
-                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-
-                  <linearGradient id="myGradient" gradientTransform="rotate(90)">
-                     <stop offset="0%" stop-color="transparent" />
-                     <stop offset="100%" stop-color="transparent" />
-                  </linearGradient>
-                  <path fill="currentColor"
-                     d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z">
-                  </path>
-               </svg>
-            </div>
          </div>
 
          <!--   ***  ENTREES ***   -->
@@ -49,9 +36,9 @@
             <h2>ENTRÉES</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Tartare de thon</h3>
-                     <p class="note">Assaisonné au yuzu</p>
+                     <p class="description">Assaisonné au yuzu</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -65,9 +52,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Bouchée de homard croustillant </h3>
-                     <p class="note">Et sa farandole de petits légumes</p>
+                     <p class="description">Et sa farandole de petits légumes</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -81,9 +68,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Velouté de cèpes </h3>
-                     <p class="note">Aux truffes</p>
+                     <p class="description">Aux truffes</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -103,9 +90,9 @@
             <h2>PLATS</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Poulet rôti aux herbes de Provence </h3>
-                     <p class="note">Et sa crème de truffe</p>
+                     <p class="description">Et sa crème de truffe</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -119,9 +106,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Langouste rôtie </h3>
-                     <p class="note">Et ses légumes de saison</p>
+                     <p class="description">Et ses légumes de saison</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -135,9 +122,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Côte de bœuf Angus</h3>
-                     <p class="note">EEt sa purée de panais</p>
+                     <p class="description">EEt sa purée de panais</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -159,9 +146,9 @@
             <h2>DESSERTS</h2>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Farandole de desserts</h3>
-                     <p class="note">Du chef</p>
+                     <p class="description">Du chef</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -175,9 +162,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Crème brulée</h3>
-                     <p class="note">Revisitée</p>
+                     <p class="description">Revisitée</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -191,9 +178,9 @@
             </ul>
             <ul class="card-list">
                <li class="card">
-                  <div class="texts-wrapper">
+                  <div class="text-content">
                      <h3>Tiramisu</h3>
-                     <p class="note">À la noisette</p>
+                     <p class="description">À la noisette</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -207,7 +194,7 @@
             </ul>
          </div>
 
-         <button type="submit" value="Commander" class="btn__cta">
+         <button type="submit" value="Commander">
             Commander
          </button>
 
@@ -218,7 +205,7 @@
    <footer>
       <h3>ohmyfood</h3>
       <ul>
-         <li class="ico-ustensils"><a href="#">Proposer un restaurant</a></li>
+         <li class="ico-tools"><a href="#">Proposer un restaurant</a></li>
          <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
          <li><a href="#">Mentions légales</a></li>
          <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
