Changements du 03 novembre

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 <body>
     <!-- Loader -->
     <div class="loader">
-        <div class="dot d1"></div>
-        <div class="dot d2"></div>
-        <div class="dot d3"></div>
+        <div class="wrapper">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+        </div>
     </div>
 
     <!-- Header -->
@@ -46,8 +51,8 @@
     <section class="section-restaurants">
         <h2>Restaurants</h2>
         <div class="restaurants-contents">
-            <a href="./restaurants/lapalettedugout.html">
-                <article class="card">
+            <article class="card">
+                <a href="./restaurants/lapalettedugout.html">
                     <div class="card-first-section">
                         <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
                         <div class="label">Nouveau</div>
@@ -62,10 +67,10 @@
                             <i class="fa-solid fa-heart"></i>
                         </div>
                     </div>
-                </article>
-            </a>
-            <a href="./restaurants/lanoteenchantee.html">
-                <article class="card">
+                </a>
+            </article>
+            <article class="card">
+                <a href="./restaurants/lanoteenchantee.html">
                     <div class="card-first-section">
                         <img src="./assets/images/restaurants/lanoteenechantee.jpg"
                             alt="Image du restaurant de la note enchantée">
@@ -81,10 +86,10 @@
                             <i class="fa-solid fa-heart"></i>
                         </div>
                     </div>
-                </article>
-            </a>
-            <a href="./restaurants/lapalettedugout.html">
-                <article class="card">
+                </a>
+            </article>
+            <article class="card">
+                <a href="./restaurants/lapalettedugout.html">
                     <div class="card-first-section">
                         <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
                     </div>
@@ -98,10 +103,10 @@
                             <i class="fa-solid fa-heart"></i>
                         </div>
                     </div>
-                </article>
-            </a>
-            <a href="./restaurants/ledelicedessens.html">
-                <article class="card">
+                </a>
+            </article>
+            <article class="card">
+                <a href="./restaurants/ledelicedessens.html">
                     <div class="card-first-section">
                         <img src="./assets/images/restaurants/ledelicedessens.jpg" alt="Image de le délice des sens">
                     </div>
@@ -115,8 +120,8 @@
                             <i class="fa-solid fa-heart"></i>
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
         </div>
     </section>
     <!-- Footer -->
