--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -83,7 +83,7 @@
             </ul>
          </div>
 
-         <!--  PLATS   -->
+         <!--  Plats   -->
 
          <div class="menu-content dish">
             <h2>PLATS</h2>
@@ -192,12 +192,8 @@
             </ul>
          </div>
 
-         <button type="submit" value="Commander" class="btn__main anim_button">
-            Commander
-         </button>
-
+         <button type="submit" value="Commander">Commander </button>
       </section>
-
    </main>
 
    <footer>
