--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -4,10 +4,9 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Menu Restaurant La Palette du Gout</title>
+   <title>Menu Restaurant La Palette du Goût</title>
    <script src="https://kit.fontawesome.com/4a5424dcf3.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" type="text/css" href="../SCSS/stylemenu.css">
-
 </head>
 
 <body>
@@ -34,7 +33,7 @@
             </div>
          </div>
 
-         <!--   ***  ENTREES ***   -->
+         <!-- Entrées  -->
 
          <div class="menu-content starter">
             <h2>ENTRÉES</h2>
@@ -88,7 +87,7 @@
             </ul>
          </div>
 
-         <!--   ***  PLATS ***   -->
+         <!-- Plats  -->
 
          <div class="menu-content dish">
             <h2>PLATS</h2>
@@ -142,9 +141,7 @@
             </ul>
          </div>
 
-
-         <!--   ***  DESSERTS ***   -->
-
+         <!-- Desserts   -->
 
          <div class="menu-content dessert">
             <h2>DESSERTS</h2>
@@ -198,12 +195,8 @@
             </ul>
          </div>
 
-         <button type="submit" value="Commander">
-            Commander
-         </button>
-
+         <button type="submit" value="Commander">Commander</button>
       </section>
-
    </main>
 
    <footer>
