--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -30,7 +30,7 @@
             <h1>Le délice des sens</h1>
          </div>
 
-         <!--   ***  ENTREES ***   -->
+         <!-- Entrées  -->
 
          <div class="menu-content starter">
             <h2>ENTRÉES</h2>
@@ -69,8 +69,8 @@
             <ul class="card-list">
                <li class="card">
                   <div class="text-content">
-                     <h3>Velouté de cèpes </h3>
-                     <p class="description">Aux truffes</p>
+                     <h3>Poulet rôti aux herbes de Provence</h3>
+                     <p class="description">Et sa crème de truffe</p>
                   </div>
                   <div class="right-content">
                      <p class="price">
@@ -84,7 +84,7 @@
             </ul>
          </div>
 
-         <!--   ***  PLATS ***   -->
+         <!-- Plats  -->
 
          <div class="menu-content dish">
             <h2>PLATS</h2>
@@ -138,9 +138,7 @@
             </ul>
          </div>
 
-
-         <!--   ***  DESSERTS ***   -->
-
+         <!--  Desserts   -->
 
          <div class="menu-content dessert">
             <h2>DESSERTS</h2>
@@ -194,12 +192,8 @@
             </ul>
          </div>
 
-         <button type="submit" value="Commander">
-            Commander
-         </button>
-
+         <button type="submit" value="Commander">Commander</button>
       </section>
-
    </main>
 
    <footer>
