--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -4,230 +4,222 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Menu Restaurant La description enchantée</title>
+   <title>Menu Restaurant La note enchantée</title>
    <script src="https://kit.fontawesome.com/4a5424dcf3.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" type="text/css" href="../SCSS/stylemenu.css">
-
 </head>
 
 <body>
    <header>
-      <header>
-         <div class="logo">
-            <a href="../index.html" class="link-back" aria-label="Page précédente">
-               <i class="fa-solid fa-arrow-left fa-lg"></i>
-            </a>
-            <div class="logo-img">
-               <img src="../assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood en lettre noir">
-            </div>
+      <div class="logo">
+         <a href="../index.html" class="link-back" aria-label="Page précédente">
+            <i class="fa-solid fa-arrow-left fa-lg"></i>
+         </a>
+         <div class="logo-img">
+            <img src="../assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood en lettre noir">
          </div>
-      </header>
+      </div>
+   </header>
 
-      <main>
-         <img class="menu-image" src="../assets/images/restaurants/ladescriptionenechantee.jpg" alt="#">
+   <main>
+      <img class="menu-image" src="../assets/images/restaurants/lanoteenechantee.jpg" alt="#">
 
-         <section class="menu">
-            <div class="menu__title">
-               <h1>La description enchantée</h1>
-            </div>
+      <section class="menu">
+         <div class="menu__title">
+            <h1>La note enchantée</h1>
+         </div>
 
-            <!--   ***  ENTREES ***   -->
+         <!--  Entrées   -->
 
-            <div class="menu-content starter">
-               <h2>ENTRÉES</h2>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Ravioles de foie gras</h3>
-                        <p class="description">Accompagnées de leur crème à la truffe</p>
+         <div class="menu-content starter">
+            <h2>ENTRÉES</h2>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Ravioles de foie gras</h3>
+                     <p class="description">Accompagnées de leur crème à la truffe</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        25€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                     <div class="right-content">
-                        <p class="price">
-                           25€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
+                  </div>
+               </li>
+            </ul>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Caviar osciètre </h3>
+                     <p class="description">Sur blini à la farine de blé noir</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        35€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                  </li>
-               </ul>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Caviar osciètre </h3>
-                        <p class="description">Sur blini à la farine de blé noir</p>
+                  </div>
+               </li>
+            </ul>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Homard et espuma de potiron</h3>
+                     <p class="description">Marinés aux zestes d'orange</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        20€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                     <div class="right-content">
-                        <p class="price">
-                           35€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
+                  </div>
+               </li>
+            </ul>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Foie gras de canard cuit entier</h3>
+                     <p class="description">Confiture de figue et pain toasté</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        35€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                  </li>
-               </ul>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Homard et espuma de potiron</h3>
-                        <p class="description">Marinés aux zestes d'orange</p>
-                     </div>
-                     <div class="right-content">
-                        <p class="price">
-                           20€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
-                     </div>
-                  </li>
-               </ul>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <p class="description">Confiture de figue et pain toasté</p>
-                     </div>
-                     <div class="right-content">
-                        <p class="price">
-                           35€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
-                     </div>
-                  </li>
-               </ul>
-            </div>
+                  </div>
+               </li>
+            </ul>
+         </div>
 
-            <!--   ***  PLATS ***   -->
+         <!-- Plats   -->
 
-            <div class="menu-content dish">
-               <h2>PLATS</h2>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <p class="description">Sur lit de purée de céleri-rave</p>
+         <div class="menu-content dish">
+            <h2>PLATS</h2>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Noix de coquilles Saint-Jacques</h3>
+                     <p class="description">Sur lit de purée de céleri-rave</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        40€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                     <div class="right-content">
-                        <p class="price">
-                           40€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
+                  </div>
+               </li>
+            </ul>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Langoustine poêlée</h3>
+                     <p class="description">Purée de patate douce</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        35€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                  </li>
-               </ul>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Langoustine poêlée</h3>
-                        <p class="description">Purée de patate douce</p>
+                  </div>
+               </li>
+            </ul>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Mijoté de queue de bœuf </h3>
+                     <p class="description">Et riz sauvage aux zestes de citron</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        44€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                     <div class="right-content">
-                        <p class="price">
-                           35€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
-                     </div>
-                  </li>
-               </ul>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Mijoté de queue de bœuf </h3>
-                        <p class="description">Et riz sauvage aux zestes de citron</p>
-                     </div>
-                     <div class="right-content">
-                        <p class="price">
-                           44€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
-                     </div>
-                  </li>
-               </ul>
-            </div>
+                  </div>
+               </li>
+            </ul>
+         </div>
 
+         <!-- Desserts -->
 
-            <!--   ***  DESSERTS ***   -->
-
-
-            <div class="menu-content dessert">
-               <h2>DESSERTS</h2>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <p class="description">Glace au caramel brun et sel de Guérandes</p>
+         <div class="menu-content dessert">
+            <h2>DESSERTS</h2>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Macaron noisette et chocolat</h3>
+                     <p class="description">Glace au caramel brun et sel de Guérandes</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        18€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                     <div class="right-content">
-                        <p class="price">
-                           18€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
+                  </div>
+               </li>
+            </ul>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Baba au rhum revisité</h3>
+                     <p class="description">Avec son coulis de citron</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        22€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                  </li>
-               </ul>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Baba au rhum revisité</h3>
-                        <p class="description">Avec son coulis de citron</p>
+                  </div>
+               </li>
+            </ul>
+            <ul class="card-list">
+               <li class="card">
+                  <div class="text-content">
+                     <h3>Tarte au citron meringuée </h3>
+                     <p class="description">Déstructurée</p>
+                  </div>
+                  <div class="right-content">
+                     <p class="price">
+                        23€
+                     </p>
+                     <div class="card__click">
+                        <i class="fa-solid fa-circle-check"></i>
                      </div>
-                     <div class="right-content">
-                        <p class="price">
-                           22€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
-                     </div>
-                  </li>
-               </ul>
-               <ul class="card-list">
-                  <li class="card">
-                     <div class="text-content">
-                        <h3>Tarte au citron meringuée </h3>
-                        <p class="description">Déstructurée</p>
-                     </div>
-                     <div class="right-content">
-                        <p class="price">
-                           23€
-                        </p>
-                        <div class="card__click">
-                           <i class="fa-solid fa-circle-check"></i>
-                        </div>
-                     </div>
-                  </li>
-               </ul>
-            </div>
+                  </div>
+               </li>
+            </ul>
+         </div>
 
-            <button type="submit" value="Commander>
-               Commander
-            </button>
+         <button type="submit" value="Commander">Commander</button>
+      </section>
+   </main>
 
-         </section>
-
-      </main>
-
-      <footer>
-         <h3>ohmyfood</h3>
-         <ul>
-            <li class=" ico-tools"><a href="#">Proposer un restaurant</a></li>
-               <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
-               <li><a href="#">Mentions légales</a></li>
-               <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
-               </ul>
-               </footer>
+   <footer>
+      <h3>ohmyfood</h3>
+      <ul>
+         <li class=" ico-tools"><a href="#">Proposer un restaurant</a></li>
+         <li class="ico-handshake-angle"><a href="#">Devenir partenaire</a></li>
+         <li><a href="#">Mentions légales</a></li>
+         <li><a href="mailto:votreadresse@mail.fr">Contact</a> </li>
+      </ul>
+   </footer>
 </body>
 
 </html>
