Ajout des coeurs sur les pages restaurants

--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
                 </a>
             </article>
             <article class="card">
-                <a href="./restaurants/lapalettedugout.html">
+                <a href="./restaurants/alafrancaise.html">
                     <div class="card-first-section">
-                        <img src="./assets/images/restaurants/lapalettedugout.jpg" alt="Image de la palette du goût">
+                        <img src="./assets/images/restaurants/alafrancaise.jpg"
+                            alt="Image de l'intérieur du restaurant à La Française">
                     </div>
                     <div class="card-second-section">
                         <div class="card-content">
