--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -27,6 +27,10 @@
       <section class="menu">
          <div class="menu__title">
             <h1>À la française</h1>
+            <div class="card-heart">
+               <i class="fa-regular fa-heart"></i>
+               <i class="fa-solid fa-heart"></i>
+            </div>
          </div>
 
          <!--  Entrées   -->
