--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -28,6 +28,10 @@
       <section class="menu">
          <div class="menu__title">
             <h1>Le délice des sens</h1>
+            <div class="card-heart">
+               <i class="fa-regular fa-heart"></i>
+               <i class="fa-solid fa-heart"></i>
+            </div>
          </div>
 
          <!-- Entrées  -->
